# FIRBenchmarks

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
results/: results.py  results_mac.txt  results_win.txt  writeup.py
src/: BaseFilter.h  CMakeLists.txt  InnerProdFIR.h  InnerProdNoWrapFIR.h  JuceConvolution.h  JuceFIR.h  RustFIR.h  SIMDFIR.h  main.cpp
src/rustfirlib/: CMakeLists.txt  Cargo.toml  cbindgen.toml  rust_fir.h
src/rustfirlib/src/: fir_filter.rs  lib.rs
